# leetcode

./: .clang-format  .gitignore  .gitmodules  1.two-sum.py  1013.partition-array-into-three-parts-with-equal-sum.py  11.container-with-most-water.py  1143.longest-common-subsequence.py  128.longest-consecutive-sequence.py  139.word-break.cpp  139.word-break.py  146.lru-cache.py  15.3-sum.py  153.find-minimum-in-rotated-sorted-array.py  162.find-peak-element.py  1631.path-with-minimum-effort.py  17.letter-combinations-of-a-phone-number.py  1706.where-will-the-ball-fall.py  198.house-robber.py  202.happy-number.py  208.implement-trie-prefix-tree.py  2156.find-substring-with-given-hash-value.py  221.maximal-square.py  2225.find-players-with-zero-or-one-losses.py  238.product-of-array-except-self.py  242.valid-anagram.py  284.peeking-iterator.py  3.longest-substring-without-repeating-characters.cpp  3.longest-substring-without-repeating-characters.py  322.coin-change.py  34.find-first-and-last-position-of-element-in-sorted-array.py  347.top-k-frequent-elements.py  371.sum-of-two-integers.py  4.median-of-two-sorted-arrays.cpp  4.median-of-two-sorted-arrays.py  417.pacific-atlantic-water-flow.py  42.trapping-rain-water.cpp  42.trapping-rain-water.py  438.find-all-anagrams-in-a-string.py  448.find-all-numbers-disappeared-in-an-array.py  472.concatenated-words.cpp  (+26 more)
.devcontainer/: devcontainer.json
WIP/: 139.word-break.py  152.maximum-product-subarray.py  198.house-robber.py  210.course-schedule-ii.py  3.longest-substring-without-repeating-characters.py  55.jump-game.py  7.reverse-integer.py  77.combinations.py
c/: lc_1116_medium_print_zero_even_odd.c  lc_1367_medium_linked_list_in_binary_tree.c  lc_1508_medium_range_sum_of_sorted_subarray_sums.c  lc_1514_medium_path_with_maximum_probability.c  lc_1684_easy_count_the_number_of_consistent_strings.c  lc_1894_medium_find_the_student_that_will_replace_the_chalk.c  lc_1945_easy_sum_of_digits_of_string_after_convert.c  lc_2022_easy_convert_1_d_array_into_2_d_array.c  lc_2028_medium_find_missing_observations.c  lc_2220_easy_minimum_bit_flips_to_convert_number.c  lc_2326_medium_spiral_matrix_iv.c  lc_2416_hard_sum_of_prefix_scores_of_strings.c  lc_2807_medium_insert_greatest_common_divisors_in_linked_list.c
could_improve/: 347.top-k-frequent-elements.py  42.trapping-rain-water.py
cpp/: createmain.sh  lc_1143_medium_longest_common_subsequence.cpp  lc_122_best_time_to_buy_and_sell_stock_ii.cpp  lc_122_medium_best_time_to_buy_and_sell_stock_ii.cpp  lc_124_hard_binary_tree_maximum_path_sum.cpp  lc_133_medium_clone_graph.cpp  lc_1368_hard_minimum_cost_to_make_at_least_one_valid_path_in_a_grid.cpp  lc_139_medium_word_break.cpp  lc_1408_easy_string_matching_in_an_array.cpp  lc_1415_medium_the_k_th_lexicographical_string_of_all_happy_strings_of_length_n.cpp  lc_143_medium_reorder_list.cpp  lc_1514_medium_path_with_maximum_probability.cpp  lc_1590_medium_make_sum_divisible_by_p.cpp  lc_1669_medium_merge_in_between_linked_lists.cpp  lc_1700_easy_number_of_students_unable_to_eat_lunch.cpp  lc_1930_medium_unique_length_3_palindromic_subsequences.cpp  lc_2017_medium_grid_game.cpp  lc_206_easy_reverse_linked_list.cpp  lc_2156_hard_find_substring_with_given_hash_value.cpp  lc_2225_medium_find_players_with_zero_or_one_losses.cpp  lc_2270_medium_number_of_ways_to_split_array.cpp  lc_232_easy_implement_queue_using_stacks.cpp  lc_238_medium_product_of_array_except_self.cpp  lc_2416_hard_sum_of_prefix_scores_of_strings.cpp  lc_2425_medium_bitwise_xor_of_all_pairings.cpp  lc_2540_easy_minimum_common_value.cpp  lc_2540_minimum_common_value.cpp  lc_2657_medium_find_the_prefix_common_array_of_two_arrays.cpp  lc_2685_medium_count_the_number_of_complete_components.cpp  lc_269_hard_alien_dictionary.cpp  lc_2707_medium_extra_characters_in_a_string.cpp  lc_287_medium_find_the_duplicate_number.cpp  lc_3042_easy_count_prefix_and_suffix_pairs_i.cpp  lc_3043_medium_find_the_length_of_the_longest_common_prefix.cpp  lc_3160_medium_find_the_number_of_distinct_colors_among_the_balls.cpp  lc_3203_hard_find_minimum_diameter_after_merging_two_trees.cpp  lc_3217_medium_delete_nodes_from_linked_list_present_in_array.cpp  lc_329_hard_longest_increasing_path_in_a_matrix.cpp  lc_349_easy_intersection_of_two_arrays.cpp  lc_349_intersection_of_two_arrays.cpp  (+20 more)
cpp_tests/: CMakeLists.txt  createtest.sh  test_1143_medium_longest_common_subsequence.cpp  test_122_best_time_to_buy_and_sell_stock_ii.cpp  test_124_hard_binary_tree_maximum_path_sum.cpp  test_1700_easy_number_of_students_unable_to_eat_lunch.cpp  test_232_easy_implement_queue_using_stacks.cpp  test_2540_minimum_common_value.cpp  test_486_medium_predict_the_winner.cpp  test_713_medium_subarray_product_less_than_k.cpp  test_739_medium_daily_temperatures.cpp  test_92_reverse_linked_list_ii.cpp
include/: binary_tree.h  linked_list.h  quick_sort.h  vector.h
need_review/: 139.word-break.py  15.3-sum.py  207.course-schedule.py  212.word-search-ii.py  229.majority-element-ii.py  33.search-in-rotated-sorted-array.py  34.find-first-and-last-position-of-element-in-sorted-array.py  973.k-closest-points-to-origin.py  986.interval-list-intersections.py
python3/: lc_100_easy_same_tree.py  lc_101_easy_symmetric_tree.py  lc_1020_medium_number_of_enclaves.py  lc_1026_medium_maximum_difference_between_node_and_ancestor.py  lc_103_medium_binary_tree_zigzag_level_order_traversal.py  lc_1061_medium_lexicographically_smallest_equivalent_string.py  lc_1071_easy_greatest_common_divisor_of_strings.py  lc_109_medium_convert_sorted_list_to_binary_search_tree.py  lc_1129_medium_shortest_path_with_alternating_colors.py  lc_1137_easy_n_th_tribonacci_number.py  lc_1143_medium_longest_common_subsequence.py  lc_1165_easy_single_row_keyboard.py  lc_11_medium_container_with_most_water.py  lc_124_hard_binary_tree_maximum_path_sum.py  lc_1254_medium_number_of_closed_islands.py  lc_125_easy_valid_palindrome.py  lc_128_medium_longest_consecutive_sequence.py  lc_129_medium_sum_root_to_leaf_numbers.py  lc_1319_medium_number_of_operations_to_make_network_connected.py  (+132 more)
(+97 files in other folders)
